[package]
name = "bench-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
async-channel = "2.3.1"
criterion = { version = "0.6", features = ["html_reports"] }
crossbeam-channel = "0.5.15"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }

[[bench]]
name = "serde_json_optimize_fields"
harness = false

[[bench]]
name = "cas_failure_slowness"
harness = false

[[bench]]
name = "channel_nonblocking_send"
harness = false
